refactor users service, add new game fields and bot play endpoint(not finished)
